--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,23 +1,50 @@
-
-h1 {
-  font-size: 50px;
-  color: black;
-
-
+* {
+  background-color: antiquewhite;
 }
+
+main{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 30px;
+}
+
+nav a {
+  font-size: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+nav li {
+  list-style-type: none;
+  
+}
+
 
 li {
   font-size: 30px;
-  background: rgb(131, 131, 150);
 }
 
-.container {
+/* #question {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 40px;
+  font-size: 30px;
+
+} */
+
+#quiz-buttons {
+  display: none;
+  font-size: 30px;
 }
 
-.questions-container {
-  display: none;
+
+.timer {
+  font-size: 20px;
+}
+
+#start-quiz {
+  font-size: 20px;
 }
