--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,9 @@
 * {
-  background-color: antiquewhite;
+  background-color: rgb(99, 194, 223);
+}
+
+.background {
+  background-image: url("../pexels-edouard-chassaigne-9323910.jpg");
 }
 
 main{
@@ -9,47 +13,24 @@ main{
   font-size: 30px;
 }
 
-nav a {
-  font-size: 30px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+header {
+
+
 }
 
-nav li {
-  list-style-type: none;
-  
-}
-
-
-li {
-  font-size: 30px;
-}
-
-/* #question {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 40px;
-  font-size: 30px;
-
-} */
-
-#quiz-buttons {
-  display: none;
-  font-size: 30px;
-  text-align: center;
+main div button {
+  margin-right: 20px;
+  font-size: 40px;
 }
 
 
-.timer {
-  font-size: 20px;
-}
-
-#start-button {
+.start-button, .submit-button {
   font-size: 20px;
   text-align: center;
   margin: auto;
-  width: 90%;
 
+}
+
+label {
+  font-size: 50px;
 }
