added preload to avoid delay in loading background image

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -82,12 +82,9 @@ label {
     padding-top:100px;
   }
 
-  .questions {
-    font-size:100px;
-    color:red;
+  main h1 {
+    font-size: 2rem;
   }
-
-
 }
 
 input {
